src_old/objects/JobAttemptWorker__c.object
<CustomObject>
    <fields>
        <fullName>CheckinTimeEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check In Time Entry</label>
        <referenceTo>JobAttemptWorkerTimeEntry__c</referenceTo>
        <relationshipLabel>Job Attempt Workers</relationshipLabel>
        <relationshipName>Job_Attempt_Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckinTimeLocalText__c</fullName>
        <formula>IF (ISBLANK(CheckinTimeLocal__c),&apos;&apos;,TEXT(MONTH(DATEVALUE(CheckinTimeLocal__c))) + &apos;/&apos; + TEXT(DAY(DATEVALUE(CheckinTimeLocal__c))) + &apos;/&apos; + TEXT(YEAR(DATEVALUE(CheckinTimeLocal__c))) + &apos; &apos; + IF (VALUE(MID(TEXT(CheckinTimeLocal__c), 12, 2)) &lt;= 12,TEXT(VALUE(MID(TEXT(CheckinTimeLocal__c), 12, 2))),TEXT(VALUE(MID(TEXT(CheckinTimeLocal__c), 12, 2)) - 12)) + &apos;:&apos; + MID(TEXT(CheckinTimeLocal__c), 15, 2) + &apos; &apos; + IF (VALUE(MID(TEXT(CheckinTimeLocal__c), 12, 2)) &lt; 12,&apos;AM&apos;,&apos;PM&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-in Time Local Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckinTimeLocal__c</fullName>
        <formula>CheckinTime__c + (TimezoneOffset__c +   IF( JobAttempt__r.Job__r.Location__r.PostalCode__r.DST__c, $Setup.OneHubCustomSetting__c.DaylightAdjustmentHours__c, 0))/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-in Time Local</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckinTime__c</fullName>
        <formula>CheckinTimeEntry__r.StartTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-in Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckoutTimeEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checkout Time Entry</label>
        <referenceTo>JobAttemptWorkerTimeEntry__c</referenceTo>
        <relationshipLabel>Job Attempt Workers (Checkout Time Entry)</relationshipLabel>
        <relationshipName>Job_Attempt_Workers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckoutTimeLocalText__c</fullName>
        <formula>IF (ISBLANK(CheckoutTimeLocal__c),&apos;&apos;,TEXT(MONTH(DATEVALUE(CheckoutTimeLocal__c))) + &apos;/&apos; + TEXT(DAY(DATEVALUE(CheckoutTimeLocal__c))) + &apos;/&apos; + TEXT(YEAR(DATEVALUE(CheckoutTimeLocal__c))) + &apos; &apos; + IF (VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2)) &lt;= 12,TEXT(VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2))),TEXT(VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2)) - 12)) + &apos;:&apos; + MID(TEXT(CheckoutTimeLocal__c), 15, 2) + &apos; &apos; + IF (VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2)) &lt; 12,&apos;AM&apos;,&apos;PM&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-out Time Local Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckoutTimeLocal__c</fullName>
        <formula>CheckoutTime__c + (TimezoneOffset__c +   IF( JobAttempt__r.Job__r.Location__r.PostalCode__r.DST__c, $Setup.OneHubCustomSetting__c.DaylightAdjustmentHours__c, 0))/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-out Time Local</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckoutTime__c</fullName>
        <formula>CheckoutTimeEntry__r.StartTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContactAccountType__c</fullName>
        <formula>TEXT(Contact__r.Account.OneHubAccountType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmployeeId__c</fullName>
        <formula>Contact__r.EmployeeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPinHash__c</fullName>
        <formula>Contact__r.PinHash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact PinHash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Job_Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateAssigned__c</fullName>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECWorkerId__c</fullName>
        <label>EC Worker Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECWorkerStatus__c</fullName>
        <label>EC Worker Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECWorkerTime__c</fullName>
        <label>EC Worker Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <label>Employee Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedMinutes__c</fullName>
        <formula>JobAttempt__r.Job__r.EstimatedMinutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecutionCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Attempt Workers</relationshipLabel>
        <relationshipName>Job_Attempt_Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCancellable__c</fullName>
        <formula>JobAttempt__r.Job__r.IsCancellable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cancellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckedIn__c</fullName>
        <formula>CheckinTimeEntry__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CheckedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCheckedout__c</fullName>
        <formula>CheckoutTimeEntry__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Checkedout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMobileEditable__c</fullName>
        <formula>IF (OR(ContactAccountType__c == &apos;Retailer&apos;,ContactAccountType__c == &apos;3rd Party&apos;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mobile Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobAttemptName__c</fullName>
        <formula>JobAttempt__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Attempt Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobAttempt__c</fullName>
        <label>Job Attempt</label>
        <referenceTo>JobAttempt__c</referenceTo>
        <relationshipLabel>Job Attempt Workers</relationshipLabel>
        <relationshipName>Job_Attempt_Workers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>This custom field will be populated with standard Last Modified Date value. Created this field for Indexing purposes</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationAddress__c</fullName>
        <formula>JobAttempt__r.Job__r.Location__r.Address__c + &quot; &quot; + JobAttempt__r.Job__r.Location__r.Address2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCity__c</fullName>
        <formula>JobAttempt__r.Job__r.Location__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <formula>JobAttempt__r.Job__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationNumber__c</fullName>
        <formula>JobAttempt__r.Job__r.Location__r.LocationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationState__c</fullName>
        <formula>TEXT(JobAttempt__r.Job__r.Location__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My3PLWork__c</fullName>
        <formula>if( $User.ThirdPartyAgency__c = ThirdPartyAgency__r.Name, True, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My3PLWork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>WorkerFirstName__c + &apos; &apos; + WorkerLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>JobAttempt__r.Job__r.Project__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOperationTitle__c</fullName>
        <formula>JobAttempt__r.Job__r.Project__r.OperationsTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Operation Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <formula>JobAttempt__r.Job__r.Project__r.OperationsTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledDate__c</fullName>
        <formula>JobAttempt__r.AttemptScheduleDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <formula>JobAttempt__r.StartTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Checked In</fullName>
                </value>
                <value>
                    <fullName>Checked Out</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupervisorEmail__c</fullName>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupervisorFirstName__c</fullName>
        <label>Supervisor First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorLastName__c</fullName>
        <label>Supervisor Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorPhone__c</fullName>
        <label>Supervisor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TeamLeadFirstName__c</fullName>
        <formula>JobAttempt__r.PrimaryJobAttemptWorker__r.ContactFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Lead First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamLeadLastName__c</fullName>
        <formula>JobAttempt__r.PrimaryJobAttemptWorker__r.ContactLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Lead Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamLeadPhone__c</fullName>
        <formula>JobAttempt__r.PrimaryJobAttemptWorker__r.ContactPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Lead Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamLeadUserId__c</fullName>
        <formula>JobAttempt__r.TeamLeadUserId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Lead User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyBusinessAutoApprove__c</fullName>
        <formula>AND(ISPICKVAL(WorkerType__c, &quot;Team Lead&quot;),( EstimatedMinutes__c &lt; 240),NOT(ISBLANK( JobAttempt__r.Job__r.JobStartTime__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3PL Business Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyStatus__c</fullName>
        <label>3PL Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Canceled - Reassigned to CMK</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Agency Declined</fullName>
                </value>
                <value>
                    <fullName>Pending 3PL Agency Approval</fullName>
                </value>
                <value>
                    <fullName>CMK Rejected</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThirdPartyAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3PL Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Attempt Workers (3PL Agency)</relationshipLabel>
        <relationshipName>Job_Attempt_Workers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdPartyApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3PL Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Attempt_Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeAdjusted__c</fullName>
        <label>Time Adjusted (minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimezoneOffset__c</fullName>
        <formula>JobAttempt__r.Job__r.Location__r.PostalCode__r.Timezoneoffset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timezone offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalBillableBreakTime__c</fullName>
        <label>Total Billable Break Time</label>
        <summarizedField>JobAttemptWorkerTimeEntry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>JobAttemptWorkerTimeEntry__c.TimeEntryType__c</field>
            <operation>equals</operation>
            <value>Break</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>JobAttemptWorkerTimeEntry__c.IsBillable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>JobAttemptWorkerTimeEntry__c.JobAttemptWorker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInStoreBillableTime__c</fullName>
        <formula>TotalInStoreTime__c    -  TotalInStoreNonBillableTime__c +  TimeAdjusted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total In-Store Billable Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalInStoreNonBillableTime__c</fullName>
        <label>Total In-Store Non-Billable Time</label>
        <summarizedField>JobAttemptWorkerTimeEntry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>JobAttemptWorkerTimeEntry__c.IsBillable__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>JobAttemptWorkerTimeEntry__c.JobAttemptWorker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInStoreTime__c</fullName>
        <label>Total In-Store Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <formula>Contact__r.User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerEmail__c</fullName>
        <formula>IF (OR(ISBLANK(Email__c),ISNULL(Email__c)),ContactEmail__c, Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerEmployeeId__c</fullName>
        <formula>IF (OR(ISBLANK(EmployeeId__c), ISNULL(EmployeeId__c)), ContactEmployeeId__c,EmployeeId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerFirstName__c</fullName>
        <formula>IF (OR(ISBLANK(FirstName__c),ISNULL(FirstName__c)),ContactFirstName__c, FirstName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerLastName__c</fullName>
        <formula>IF (OR(ISBLANK(LastName__c),ISNULL(LastName__c)),ContactLastName__c,LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerPhone__c</fullName>
        <formula>IF (OR(ISBLANK(Phone__c),ISNULL(Phone__c)),ContactPhone__c,Phone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerPositionId__c</fullName>
        <formula>VALUE(RIGHT(Name, 9))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worker Position Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkerType__c</fullName>
        <label>Worker Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                    <default>true</default>
                    <label>Team Member</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Attempt Worker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CheckinTimeEntry__c</columns>
        <columns>CheckoutTimeEntry__c</columns>
        <columns>DateAssigned__c</columns>
        <columns>JobAttempt__c</columns>
        <columns>TeamLeadUserId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Survey_com</fullName>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>ThirdPartyAgencyStatus__c</columns>
        <columns>NAME</columns>
        <columns>ECWorkerId__c</columns>
        <columns>ProjectTitle__c</columns>
        <columns>EstimatedMinutes__c</columns>
        <columns>LocationAddress__c</columns>
        <columns>LocationNumber__c</columns>
        <columns>LocationName__c</columns>
        <columns>LocationCity__c</columns>
        <columns>LocationState__c</columns>
        <columns>StartTime__c</columns>
        <columns>ECWorkerTime__c</columns>
        <columns>ProjectNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ThirdPartyAgencyStatus__c</field>
            <operation>equals</operation>
            <value>Committed,Accepted</value>
        </filters>
        <filters>
            <field>My3PLWork__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>L&apos;Oreal Usa,Inc</label>
    </listViews>
    <nameField>
        <displayFormat>JAW-{000000000}</displayFormat>
        <label>Job Attempt Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Attempt Workers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignment_Contact_missing</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ExecutionCompany__r.AllowUnknownAssignments__c == FALSE, 
NOT(ISBLANK(ContactId__c)), 
ISBLANK(Contact__c ) 

)</errorConditionFormula>
        <errorMessage>Assign Contact does not exist in OneHub</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Cancel_Worker_Already_Started</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status__c),UPPER(TEXT(Status__c)) == &apos;CANCELED&apos;,IsCheckedIn__c == True)</errorConditionFormula>
        <errorMessage>Cannot cancel worker who has already checked in and started the work.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Cancel_Worker_Insuff_LeadTime</fullName>
        <active>true</active>
        <description>Cannot cancel workers for a job that does not have sufficient lead time. Will follow rules for job cancellation.</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c),UPPER(TEXT(Status__c)) == &apos;CANCELED&apos;,IsCancellable__c == False)</errorConditionFormula>
        <errorMessage>Cannot cancel worker. Insufficient lead time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Asgnmnt_for_Started_Worker</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(ContactId__c),IsCheckedIn__c == True)</errorConditionFormula>
        <errorMessage>Cannot change assignment of a worker who has already checked in and started the work.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reject_Canceled_Worker_Updates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(UPPER(TEXT(PRIORVALUE(Status__c))) == &apos;CANCELED&apos;, UPPER(TEXT(Status__c)) != &apos;CANCELED&apos;)</errorConditionFormula>
        <errorMessage>This worker has already been canceled. Cannot accept updates.</errorMessage>
    </validationRules>
</CustomObject>